# compile-time-crc32

./: .gitignore  Cargo.toml
compile-time-crc32/: Cargo.toml
compile-time-crc32/src/: lib.rs
compile-time-crc32/tests/: macro_test.rs
src/: lib.rs
tests/: macro_test.rs
