[package]
name = "compile-time-crc32"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5.11"
compile-time-crc32-impl = { path = ".." }
